--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./res/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./res/css/style.css" />
     <title>Cookie Clicker</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="main">
-    <img id="cookie" src="./res/img/cookie.png" alt="cookie.png">
-    <p id="tracker">Cookies Per Second: 0</p>
-    <p id="mousetracker">Cookies Per Click: 1</p>
-    <p id="counter">Cookies: 0</p>
-    <button id="upgrade">Mouse Upgrade<br>Cost: 100</button>
-    <button id="clicker">Clicker Upgrade<br>Cost: 25</button>
+      <img id="cookie" src="./res/img/cookie.png" alt="cookie.png" />
+      <p id="tracker">Cookies Per Second: 0</p>
+      <p id="mousetracker">Cookies Per Click: 1</p>
+      <p id="counter">Cookies: 0</p>
+
+      <div class="buttons">
+        <button id="upgrade">Mouse Upgrade<br />Cost: 100</button>
+        <button id="clicker">Clicker Upgrade<br />Cost: 25</button>
+      </div>
     </div>
     <script src="./res/js/main.js"></script>
-</body>
+  </body>
 </html>
